# data-transformations

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml  sample_data.nyc  sqlmesh.main  test
audits/: latency_threshold.sql
dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: export_artifacts.py  export_artifacts.sql  import_artifacts.py  import_artifacts.sql
dbt/models/: schema.yml
dbt/models/md/: dropoff_passengers_count.sql  passengers.sql  pickup_passengers_count.sql
dbt/models/pg/: messages.sql
external_models/: motherduck.yaml  postgres.yaml
generator/: README.md  db_generate.py  models.py
generator/tests/: db_generate_test.py
models/: incremental_model.sql  test.sql
models/motherduck/: passengers.sql  test.sql
models/postgres/: messages.sql
reports/.evidence/customization/: .profile.json
reports/pages/: test.md
reports/sources/dbt/: connection.yaml
scripts/: generate-postgres.sh
tests/: test_latency.yaml
tmp/: taxi.sql
