[project]
name = "test-sqlmesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "sqlmesh[athena,postgres,web]>=0.164.0",
    "avro>=1.12.0",
    "faker>=37.0.0",
    "psycopg>=3.2.6",
    "dbt-core>=1.9.3",
    "dbt-postgres>=1.9.0",
    "dbt-duckdb[md,motherduck]>=1.9.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.5",
    "pytest-dependency>=0.6.0",
]
